# ioi

./: .dockerignore  .gitignore  AGENTIC_RUNTIME_AUDIT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-BBSL  README-deprecated.md  README.md  REFACTOR_PROGRESS.md  SECURITY.md  TESTING.md  additional-setup.sh  build-all.sh  codebase.txt  codebase_snapshot.md  crypto-homomorphic-setup.sh  dev-setup.sh  output.txt  package-lock.json  package.json  pyrightconfig.json  quick-start.sh  run-example.sh  rust-toolchain.toml  setup.sh  state_node1.json  state_node2.json  test.workflow  tree.md  yellow_paper.aux  yellow_paper.out
crates/agentgres/: Cargo.toml  DETERMINISM-AUDIT.md
crates/agentgres/src/: lib.rs  mux.rs  replica.rs
crates/api/: Cargo.toml
crates/api/src/: chat.rs  chat_mock.rs  execution.rs  lib.rs  runtime_harness.rs  studio.rs  studio_mock.rs
crates/api/src/app/: mod.rs
crates/api/src/chain/: mod.rs
crates/api/src/chat/: domain_topology.rs  html.rs  html_registry.rs  intent_context.rs  intent_signals.rs  payload.rs  pdf.rs  planning.rs  render_eval.rs  specialized_policy.rs  tests.rs  types.rs  validation.rs
crates/api/src/chat_mock/: tests.rs
crates/api/src/commitment/: homomorphic.rs  identifiers.rs  mod.rs  scheme.rs
crates/api/src/config/: mod.rs
crates/api/src/consensus/: mod.rs
crates/api/src/crypto/: mod.rs
crates/api/src/error/: mod.rs
crates/api/src/execution/: tests.rs
crates/api/src/homomorphic/: operations.rs
crates/api/src/ibc/: mod.rs  zk.rs
crates/api/src/identity/: mod.rs
crates/api/src/lifecycle/: mod.rs
crates/api/src/runtime/: mod.rs
crates/api/src/services/: access.rs  capabilities.rs  mod.rs
crates/api/src/state/: accessor.rs  commitment.rs  manager.rs  mod.rs  namespaced.rs  overlay.rs  pins.rs  proof.rs  retention.rs  tree.rs
crates/api/src/storage/: mod.rs
crates/api/src/studio/: domain_topology.rs  generation.rs  html.rs  html_registry.rs  intent_signals.rs  judging.rs  payload.rs  pdf.rs  planning.rs  render_eval.rs  runtime_locality.rs  specialized_policy.rs  tests.rs  types.rs  validation.rs
crates/api/src/studio_mock/: tests.rs
crates/api/src/test_utils/: mock_commitment.rs  mod.rs
crates/api/src/transaction/: context.rs  decorator.rs  mod.rs
crates/api/src/types/: mod.rs
crates/api/src/validator/: container.rs  mod.rs  types.rs
crates/api/src/vm/: inference.rs  mod.rs  overlay.rs
crates/api/src/zk/: mod.rs
crates/binaries/: Cargo.toml
crates/binaries/src/: lib.rs
crates/binaries/tests/: contract_e2e.rs  governance_e2e.rs  staking_e2e.rs
crates/chain/: Cargo.toml
crates/chain/src/: lib.rs  upgrade_manager.rs  util.rs
crates/chain/src/app/: mod.rs
crates/chain/src/runtime_service/: mod.rs
crates/chain/src/traits/: mod.rs
crates/chain/src/upgrade_manager/: mod.rs
crates/client/: Cargo.toml
crates/client/src/: ipc.rs  lib.rs  security.rs  shmem.rs  slicing.rs  workload_client.rs
crates/commitment/: Cargo.toml
crates/commitment/src/: lib.rs
crates/commitment_schemes/: Cargo.toml
crates/commitment_schemes/src/: lib.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: admft.rs  lib.rs  proof_of_authority.rs  proof_of_stake.rs  round_robin.rs  util.rs
crates/contract/: Cargo.toml
crates/contract-sdk/: Cargo.toml
crates/contract-sdk/src/: context.rs  host.rs  lib.rs  state.rs
crates/contract/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  key_store.rs  lib.rs  security.rs  tests.rs
crates/drivers/: Cargo.toml  README.md
crates/drivers/src/: authority.rs  browser.rs  chat_render.rs  lib.rs  os.rs  studio_render.rs  ucp.rs
crates/execution/: Cargo.toml  README.md
crates/execution/src/: lib.rs  mv_memory.rs  scheduler.rs  util.rs
crates/forge/: Cargo.toml  dummy.json  orchestrator_dummy_store.db
crates/forge/src/: lib.rs  main.rs  testing.rs
crates/forge/tests/: adaptive_timing_e2e.rs  agentic_consensus_e2e.rs  benchmark_throughput.rs  chain_factory_e2e.rs  container_e2e.rs  contract_e2e.rs  dynamic_verifier_e2e.rs  governance_e2e.rs  ibc_e2e.rs  ibc_golden_e2e.rs  ibc_relayer_e2e.rs  ibc_zk_e2e.rs  infra_e2e.rs  interop_e2e.rs  module_upgrade_e2e.rs  oracle_e2e.rs  oracle_signer_e2e.rs  penalty_poa_e2e.rs  penalty_pos_e2e.rs  polymorphism_e2e.rs  pqc_migration_e2e.rs  proof_verification_e2e.rs  security_e2e.rs  semantic_consensus_e2e.rs  service_architecture_e2e.rs  staking_e2e.rs  state_iavl_e2e.rs  state_jellyfish_e2e.rs  state_sparse_merkle_e2e.rs  state_verkle_e2e.rs  sync_e2e.rs  t_timestamp_coherence.rs  topology_e2e.rs  workload_control_e2e.rs
crates/governance/: Cargo.toml
crates/homomorphic/: Cargo.toml
crates/homomorphic/src/: error.rs  lib.rs  proof.rs
crates/http-rpc-gateway/: Cargo.toml  README.md
crates/http-rpc-gateway/src/: lib.rs  proof_converter.rs
crates/ibc-host/: Cargo.toml
crates/ibc-host/src/: lib.rs
crates/ipc/: Cargo.toml  README.md  build.rs
crates/ipc/proto/: blockchain.proto  control.proto  public.proto
crates/ipc/src/: data.rs  jsonrpc.rs  lib.rs  security.rs  tests.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  tests.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  traits.rs
crates/node/: Cargo.toml  Dockerfile  build.rs
crates/node/src/: main.rs  runtime_bridge_events.rs
crates/pii/: Cargo.toml
crates/pii/src/: assist.rs  cim_v0.rs  decision.rs  hashing.rs  lib.rs  review_contract.rs  review_summary.rs  routing.rs  scoped_exception.rs  targets.rs  tests.rs  transform.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/services/tests/: agent_runtime_anti_cheat.rs  bounded_runtime_invariants.rs  envelope_integration.rs  pii_hard_gates.rs  pii_metrics.rs  timer_planner_live_e2e.rs
crates/sp1-guests/: Cargo.toml
crates/sp1-guests/src/: beacon_update.rs  lib.rs  state_inclusion.rs
crates/state/: Cargo.toml
crates/state-tree/: Cargo.toml
crates/state/src/: lib.rs
crates/state_trees/: Cargo.toml
crates/state_trees/src/: lib.rs
(+12410 files in other folders)
