# Path: Cargo.toml

# Explicitly opt-in to the unstable 'profile-rustflags' feature.
# This is required by the nightly toolchain to allow setting rustflags
# on a per-package basis, which is necessary for our mixed std/no_std build.
cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
exclude = ["crates/sp1-guests"]
members = [
    # Renamed from "binaries"
    "crates/node",
    # New developer toolkit and E2E test crate
    "crates/forge",

    "crates/contract-sdk",

    # Core SDK library crates
    "crates/execution",
    "crates/state",
    "crates/consensus",
    "crates/api",
    "crates/types",
    "crates/crypto",
    "crates/networking",
    "crates/services",
    "crates/storage",
    "crates/system",
    "crates/telemetry",
    "crates/test_utils",
    "crates/tx",
    "crates/validator",
    "crates/vm/wasm",

    # Interop
    "crates/ibc-host",
    "crates/http-rpc-gateway",
    "crates/zk-types",
    "crates/zk-driver-succinct",
]

[workspace.dependencies]
# Add ioi-contract-sdk to the workspace dependencies
ioi-contract-sdk = { path = "crates/contract-sdk", default-features = false }

# Networking & HTTP Ecosystem
# Version pins for hyper, axum, tower, tendermint, and time have been removed.
# This allows cargo to resolve versions compatible with the updated ibc-rs dependencies,
# which require hyper v1.x and a newer version of the `time` crate.
libp2p = { version = "0.52", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "macros",
    "request-response",
    "identify",
    "yamux",
    "tcp",
    "noise",
] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
hyper = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["limit", "trace", "catch-panic"] }

# Metrics
prometheus = { version = "0.13" }

# RPC Hardening & Middleware
ipnetwork = { version = "0.20" }

# Async
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
async-trait = { version = "0.1" }
arc-swap = "1.6"

# FIX: Add the missing futures-util dependency to the workspace.
futures-util = "0.3"

# Serialization & Data Formats
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.8" }
bytes = { version = "1" }
hex = { version = "0.4" }
serde_bytes = { version = "0.11" }
prost = { version = "0.12" }
base64 = { version = "0.21" }
bincode = { version = "1.3.3" }
zeroize = { version = "1.5", features = ["zeroize_derive"] }

# mTLS
tokio-rustls = { version = "0.25.0" }
rustls = { version = "0.22.2", features = ["ring"] }
rcgen = { version = "0.12.0" }
webpki-roots = { version = "0.26.0" }
rustls-pemfile = { version = "2.1" }

# Cryptography1.1.1
rand = { version = "0.8" }
dcrypt = { version = "1.1.1", features = ["full"] }

# CLI & Logging / Telemetry
clap = { version = "4", features = ["derive"] }
log = { version = "0.4" }
env_logger = { version = "0.10" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "time",
] }
tracing-log = "0.2"

# Error Handling
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }

# VM
wasmtime = { version = "19.0.1" }

# Codecs
parity-scale-codec = { version = "3", features = ["derive"] }

# Caching & Hashing
lru = { version = "0.12.3" }
dashmap = { version = "5.5" }
once_cell = { version = "1.19" }
ahash = { version = "0.8" }

# Bitflags for Capabilities
bitflags = { version = "2", features = ["serde"] }

# IBC
tendermint = "0.36.0"
tendermint-proto = "0.36.0"
tendermint-testgen = "0.36.0"
ibc-client-tendermint = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-client-tendermint-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-client = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-channel = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-connection = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-router = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-client-context = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-client-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-commitment-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-connection-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-channel-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-handler-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-handler = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-host = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-host-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-router-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-primitives = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs.git", tag = "v0.44.0" }
ibc = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ics23 = { version = "0.11" }

# This entry is REQUIRED for `workspace = true` inheritance to work.
# It defines the "default" version and features for workspace members.
time = { version = "0.3.36", features = ["macros", "serde"] }

# --- PATCH START ---
# This section tells Cargo to use specific git repositories for ALL ibc-rs crates,
# overriding any attempt to fetch them from crates.io. This is the definitive fix
# for ensuring the correct git-tagged versions are used throughout the dependency graph.
[patch.crates-io]
ibc-client-tendermint = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-client-tendermint-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-client = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-channel = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-connection = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-router = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-client-context = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-client-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-commitment-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-connection-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-channel-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-handler-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-handler = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-host = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-host-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-core-router-types = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-primitives = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs.git", tag = "v0.44.0" }
ibc = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c43c5c8a2cc35359d91c9ef757371af447e4938f" }
# --- PATCH END ---
