# Path: crates/api/Cargo.toml
[package]
name = "ioi-api"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "Core traits and APIs for the IOI SDK"
license = "MIT OR Apache-2.0"

[dependencies]
ioi-types = { path = "../types" }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
libp2p = { workspace = true }
dcrypt = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
hex = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "std"] }
zeroize = { workspace = true, features = ["alloc"] }
anyhow = { workspace = true }

# FIX: Add the missing dependency on ibc-primitives.
# This is required because TxContext now contains an ibc_primitives::Timestamp.
ibc-primitives = { workspace = true }

[features]
default = []
homomorphic = []
post-quantum = []
