# Path: crates/api/Cargo.toml
[package]
name = "ioi-api"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "Core traits and APIs for the IOI Kernel"
license.workspace = true
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
ioi-types = { path = "../types" }
# REVERTED: ioi-crypto = { path = "../crypto" }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
libp2p = { workspace = true }
dcrypt = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
hex = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "std"] }
zeroize = { workspace = true, features = ["alloc"] }
anyhow = { workspace = true }

# [FIX] Removed ibc-primitives to break dependency on IBC stack for local mode.
# ibc-primitives = { workspace = true }

# [FIX] Added 'stream' feature for chunked responses
reqwest = { version = "0.11", features = ["json", "stream"] }

[dev-dependencies]
rand = { workspace = true }
futures-util = { workspace = true }
# [FIX] Allow tests to use the mock commitment helpers
ioi-test-utils = { path = "../test_utils" }

[features]
default = []
homomorphic = []
post-quantum = []