[package]
name = "depin-sdk-binaries"
version = "0.1.0"
edition = "2021"
description = "Binary targets for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace Library Crates
depin-sdk-chain = { path = "../chain" }
depin-sdk-commitment-schemes = { path = "../commitment_schemes" }
depin-sdk-consensus = { path = "../consensus", features = [
] } # No features by default
depin-sdk-core = { path = "../core" }
depin-sdk-state-trees = { path = "../state_trees" }
depin-sdk-sync = { path = "../sync" }
depin-sdk-transaction-models = { path = "../transaction_models" }
depin-sdk-validator = { path = "../validator" }

# Workspace Dependencies (for binary)
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
# FIX: Add dependencies required by genesis loading logic.
serde_json = { workspace = true }
bs58 = "0.4"


[dev-dependencies]
anyhow = { workspace = true }
tempfile = "3.3"
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
bs58 = "0.4"
# The test needs access to libp2p types like `identity`.
libp2p = { workspace = true }
# The test needs access to core types for building the transaction.
depin-sdk-core = { path = "../core" }

[features]
# FIX: Set a default feature to make workspace tests and default builds work.
default = ["consensus-poa"]
# NEW: Define top-level features for the binary.
consensus-round-robin = [
    "depin-sdk-validator/consensus-round-robin",
    "depin-sdk-consensus/round-robin",
]
consensus-poa = ["depin-sdk-validator/consensus-poa", "depin-sdk-consensus/poa"]
