[package]
name = "depin-sdk-binaries"
version = "0.1.0"
edition = "2021"
description = "Binary targets for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace Library Crates
depin-sdk-chain = { path = "../chain" }
depin-sdk-commitment-schemes = { path = "../commitment_schemes" }
depin-sdk-consensus = { path = "../consensus", default-features = false }
depin-sdk-core = { path = "../core" }
depin-sdk-state-trees = { path = "../state_trees" }
depin-sdk-network = { path = "../network" }
depin-sdk-transaction-models = { path = "../transaction_models" }
depin-sdk-validator = { path = "../validator", default-features = false }
depin-sdk-vm-wasm = { path = "../vm/wasm", optional = true }

# Workspace Dependencies (for binary)
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cfg-if = "1.0"
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
bs58 = "0.4"

[dev-dependencies]
anyhow = { workspace = true }
tempfile = "3.3"
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
bs58 = "0.4"
# The test needs access to libp2p types like `identity`.
libp2p = { workspace = true }
# The test needs access to core types for building the transaction.
depin-sdk-core = { path = "../core" }
reqwest = { workspace = true }
hex = { workspace = true }

[features]
default = ["consensus-poa", "vm-wasm"]
# These features enable the corresponding features in our direct dependencies.
# This allows the cfg_if! macro in node.rs to work correctly.
consensus-round-robin = [
    "depin-sdk-validator/consensus-round-robin",
    "depin-sdk-consensus/round-robin",
]
consensus-poa = ["depin-sdk-validator/consensus-poa", "depin-sdk-consensus/poa"]
consensus-pos = ["depin-sdk-validator/consensus-pos", "depin-sdk-consensus/pos"]

# VM Features
vm-wasm = ["dep:depin-sdk-vm-wasm"]
