# Path: crates/chain/Cargo.toml
[package]
name = "depin-sdk-chain"
version = "0.1.0"
edition = "2021"
description = "Chain implementation components for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-api = { path = "../api" }
depin-sdk-types = { path = "../types" }
depin-sdk-commitment = { path = "../commitment" }
depin-sdk-transaction-models = { path = "../transaction_models" }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
async-trait = { workspace = true }
bs58 = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
depin-sdk-commitment = { path = "../commitment", features = ["tree-hashmap"] }
depin-sdk-vm-wasm = { path = "../vm/wasm" }

[features]
default = []
