# Path: crates/chain/Cargo.toml
[package]
name = "depin-sdk-chain"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "Chain implementation components for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-api = { path = "../api" }
depin-sdk-types = { path = "../types" }
depin-sdk-commitment = { path = "../commitment" }
depin-sdk-transaction-models = { path = "../transaction_models" }
depin-sdk-services = { path = "../services" }
depin-sdk-consensus = { path = "../consensus", features = ["poa", "pos"] }
depin-sdk-crypto = { path = "../crypto" }
log = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
async-trait = { workspace = true }
bs58 = "0.4"
# Add wasmtime
wasmtime = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }             # Add tokio
futures = { workspace = true }                                # Add futures
parity-scale-codec = { workspace = true, features = ["std"] }
toml = { workspace = true }

# [+] FIX: Add the missing dependency here
ibc-primitives = { workspace = true }


[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
depin-sdk-commitment = { path = "../commitment", features = ["tree-iavl"] }
depin-sdk-vm-wasm = { path = "../vm/wasm" }

[features]
default = []
