# Path: crates/client/Cargo.toml
[package]
name = "depin-sdk-client"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "IPC Client for DePIN SDK validator containers"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-api = { path = "../api" }
depin-sdk-types = { path = "../types" }
ipc_protocol = { path = "../ipc_protocol" }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
# --- FIX START: Add missing dependencies for cert loading ---
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
libp2p = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }
# --- FIX END ---