# Path: crates/commitment/Cargo.toml
[package]
name = "depin-sdk-commitment"
version = "0.1.0"
edition = "2021"
description = "State commitment trees and cryptographic primitives for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-api = { path = "../api" }
depin-sdk-types = { path = "../types" }
depin-sdk-crypto = { path = "../crypto" }
# ... other dependencies like serde, log, etc.
dcrypt = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
lazy_static = "1.4.0"                               # Needed for SMT EMPTY_HASH

[features]
default = []

# Primitives
primitive-hash = []
primitive-kzg = []
primitive-lattice = []
primitive-pedersen = ["depin-sdk-api/homomorphic"]

# Trees (depend on primitives)
tree-hashmap = ["primitive-hash"]
tree-file = ["primitive-hash"]
tree-verkle = ["primitive-kzg"]
tree-sparse-merkle = ["primitive-hash"]
tree-iavl = ["primitive-hash"]
# ... add features for the full shopping list
