[package]
name = "depin-sdk-commitment-schemes"
version = "0.1.0"
edition = "2021"
description = "Commitment scheme implementations for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-core = { path = "../core" }
depin-sdk-crypto = { path = "../crypto" }
dcrypt = { version = "0.12.0-beta.1", features = ["full"] }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }

[features]
default = []
hash = []
kzg = []
module_lwe = ["depin-sdk-core/post-quantum"]
elliptical_curve = ["depin-sdk-core/homomorphic"]
