[package]
name = "depin-sdk-consensus"
version = "0.1.0"
edition = "2021"
description = "Consensus for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-core = { path = "../core" }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
libp2p = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["time"], optional = true }

[features]
default = []
# A feature for each engine
round-robin = ["dep:tokio"]
poa = ["dep:tokio"]
tendermint = []
custom-consensus = []
